# monarch

./: .gitignore  README.md
.github/workflows/: ci.yml
command-center/: .gitignore  README.md
command-center/.github/workflows/: desktop-build.yml
command-center/deploy/: deadman.service  deadman.timer
command-center/desktop/: .env.example  Dockerfile.build  README.md  package-lock.json  package.json
command-center/desktop/scripts/: build-desktop.sh
command-center/desktop/src-tauri/: Cargo.toml  tauri.conf.json
command-center/desktop/src-tauri/capabilities/: default.json
command-center/desktop/src-tauri/icons/: icon.icns
command-center/desktop/src-tauri/src/: lib.rs  main.rs
command-center/scripts/: deadman-ping.sh  make_fixture.py
command-center/server/: codebase_bridge.py  config.py  derive.py  docs_router.py  legibility.py  main.py  models.py  pg_reader.py  pytest.ini  requirements.txt  retrieval_bridge.py  supervisor_bridge.py  vault_reader.py
command-center/server/api/: __init__.py  routes.py
command-center/server/control/: __init__.py  acks.py  audit.py  auth.py  registry.py
command-center/web/: .gitignore  capture.html  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
contracts/: __init__.py  ledger.py  state.py
contracts/tests/: test_conformance.py
docs/: ARCHITECTURE.md
loki/: .gitignore  README.md  daemon.py  deploy.sh  pytest.ini  requirements.txt
loki/docs/: MEMORY_ARCHITECTURE.md
loki/loki/: __init__.py  authority.py  engine.py  rules.py  schema.py  state.py  timeutil.py
(+225 files in other folders)
