[package]
name = "command-center"
version = "0.1.0"
description = "Monarch Command Center — native desktop client"
authors = ["monarch"]
edition = "2021"
rust-version = "1.77.2"

# The Tauri application logic lives in a library so the same code drives the
# desktop binary and (later) any mobile entry point.
[lib]
name = "command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, more secure release binaries: abort on panic (no unwind tables),
# strip symbols, optimize for size.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
